# VkPong

./: CMakeLists.txt  README.md  compile  run
mod/: mod.json
res/ConstexprMap/: CMakeLists.txt  ConstexprMap.h
res/Timer/: CMakeLists.txt  Timer.cpp  Timer.h
res/nlohmannjson/: CMakeLists.txt
shaders/: shader.frag  shader.vert
src/: main.cpp
src/Game/: Game.cpp  Game.h  GameStartup.cpp  GameStartup.h  Math.cpp  Math.h
src/Logging/: ErrorLog.h  VkDebug.cpp  VkDebug.h
src/Vulkan/: VkCommands.cpp  VkCommands.h  VkDescriptorSetsAllocator.cpp  VkDescriptorSetsAllocator.h  VkFramebuffer.cpp  VkFramebuffer.h  VkMemoryAllocator.cpp  VkMemoryAllocator.h  VkPipeline.cpp  VkPipeline.h  VkQuad.cpp  VkQuad.h  VkRenderer.cpp  VkRenderer.h  VkSampler.cpp  VkSampler.h  VkShader.cpp  VkShader.h  VkState.cpp  VkState.h  VkSwapChain.cpp  VkSwapChain.h  VkTexture2D.cpp  VkTexture2D.h  VkUtils.h  VkVirtualFrame.cpp  VkVirtualFrame.h
src/Vulkan/Core/: ExtFunctions.cpp  ExtFunctions.h  VkMain.cpp  VkMain.h  VkQueues.cpp
src/Window/: Window.cpp  Window.h
src/models/: Img.cpp  Img.h  Quad.h
